--- a/src/app/aggiungi-studente/aggiungi-studente.component.html
+++ b/src/app/aggiungi-studente/aggiungi-studente.component.html
@@ -25,7 +25,7 @@
       />
     </mat-form-field>
     <mat-form-field appearance="fill">
-      <mat-label>Choose a date</mat-label>
+      <mat-label>Scegli una data</mat-label>
       <input
         matInput
         [matDatepicker]="picker"
