--- a/src/app/aula/aula.component.css
+++ b/src/app/aula/aula.component.css
@@ -50,5 +50,6 @@
   background: #ccc;
   border: dotted 3px #999;
   min-width: 60px;
+  min-height: 60px;
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
