--- a/src/app/cerca-studente/cerca-studente.component.html
+++ b/src/app/cerca-studente/cerca-studente.component.html
@@ -36,8 +36,8 @@
   </button>
   <mat-card-subtitle>
     Serve a poco, per adesso sono tutti in D, se vuoi puoi creare una nuova
-    classe, assegnargli gli studenti e metterli nella sezione che vuoi tutti
-    insieme</mat-card-subtitle
+    classe in "imposta classe", assegnargli gli studenti e metterli nella
+    sezione che vuoi tutti insieme</mat-card-subtitle
   >
   <mat-card-subtitle>
     Oppure aggiungi uno studente e gli dai la sezione che ti interessa, ma
