--- a/src/app/aula/aula.component.html
+++ b/src/app/aula/aula.component.html
@@ -113,5 +113,7 @@
       </div>
     </div>
   </div>
+  <div></div>
+  
   <button mat-raised-button (click)="foo()">Salva(ma funziona male)</button>
 </mat-card>
