--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -70,7 +70,7 @@
       [arrayAnniScolastici]="arrayAnniScolastici"
     ></app-aggiungi-classe>
   </section>
-  <section *ngIf="aule">
+  <section>
     <app-aula
       [arraySezioni]="arraySezioni"
       [arrayAnniScolastici]="arrayAnniScolastici"
