--- a/src/app/aula/aula.component.html
+++ b/src/app/aula/aula.component.html
@@ -73,11 +73,8 @@
         </div>
       </div>
     </div>
-    <mat-grid-list cols="2" rowHeight="2:1">
-      <mat-grid-tile></mat-grid-tile>
-      <mat-grid-tile></mat-grid-tile>
-      <mat-grid-tile></mat-grid-tile>
-      <mat-grid-tile></mat-grid-tile>
+    <mat-grid-list cols="5" row="5" rowHeight="2:1" cdkDropListGroup>
+      <mat-grid-tile *ngFor="let i of arr"></mat-grid-tile>
     </mat-grid-list>
   </div>
 
